<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/btnMenuPlayas"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/menu_playas" >

        <TextView
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:textColor="#FFF"
            android:text="@string/menu_playas"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
    </RelativeLayout>
    
     <RelativeLayout
        android:id="@+id/btnMenuRestaurantes"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/menu_restaurantes" >

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="14dp"
             android:text="@string/menu_restaurantes"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="#FFF"
             android:textStyle="bold" />
             
    </RelativeLayout>
           
      <RelativeLayout
        android:id="@+id/btnMenuHoteles"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/menu_hoteles" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:textColor="#FFF"
            android:text="@string/menu_hoteles"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
    </RelativeLayout>
    
       <RelativeLayout
        android:id="@+id/btnMenuVida_Nocturna"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/menu_vida_nocturna" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:textColor="#FFF"
            android:text="@string/menu_vida_nocturna"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
    </RelativeLayout>
    
     <RelativeLayout
        android:id="@+id/btnMenuTours"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/menu_tours" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:textColor="#FFF"
            android:text="@string/menu_tours"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
    </RelativeLayout>

</LinearLayout>
